syntax = "proto3";

package mentoria.pix.v1;

import "google/protobuf/empty.proto";

option go_package = "mentoria/pix/v1;pb";


message BankAccount {
  string id = 1;
  string bank_code = 2;
  string bank_name = 3;
  string bank_branch = 4;
  string account_number = 5;
}

message Pix {
  string id = 1;
  string user_id = 2;
  string bank_account_id = 3;
  string balance = 4;
}

enum PixType {
  EMAIL = 0;
  PHONE = 1;
  CPF = 2;
  RANDOM = 3;
}

message PixCode {
  string id = 1;
  string pix_id = 2;
  PixType type = 3;
  string code = 4;
}

message Transaction {
  string id = 1;
  string date = 2;
  string amount = 3;
  string sender_id = 4;
  string receiver_id = 5;
}

message ListUserTransactionsByIdResponse {
  repeated Transaction transactions = 1;
}

service PixService {
  rpc CreateBankAccount(BankAccount) returns (BankAccount) {}
  rpc GetBankAccountById(BankAccount) returns (BankAccount) {}

  rpc CreatePix(Pix) returns (Pix) {}
  rpc GetPixById(Pix) returns (Pix) {}
  rpc UpdatePixBalance(Pix) returns (Pix) {}

  rpc CreatePixCode(PixCode) returns (PixCode) {}
  rpc GetPixCodeByPixId(PixCode) returns (PixCode) {}
  rpc GetPixCodeByCode(PixCode) returns (PixCode) {}
  rpc UpdatePixCode(PixCode) returns (PixCode) {}
  rpc DeletePixCode(PixCode) returns (google.protobuf.Empty) {}

  rpc CreateTransaction(Transaction) returns (Transaction) {}
  rpc ListUserTransactionsById(Transaction) returns (ListUserTransactionsByIdResponse) {}
  rpc UpdateTransactionById(Transaction) returns (Transaction) {}
}